fix hover on mobile & styling

--- a/src/Components/CardViewAll/CardView.module.css
+++ b/src/Components/CardViewAll/CardView.module.css
@@ -82,7 +82,7 @@
 }
 
 .card__bar:hover {
-  height: 530px;
+  height: 500px;
   transition: all 0.5s;
 }
 
@@ -112,4 +112,19 @@
       height: 100%;
       padding: 20px 10px;
   }
+  .card__bar>.hide {
+    display: block;
+    height: 500px;
+    transition: all 0.5s;
+  }
+  
+  .card__bar {
+    height: 500px;
+    transition: all 0.5s;
+  }
+  
+  .card_container:hover {
+    transform: scale(1.050);
+  }
+  
 }
